# libracad

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
docker/: .env.libracad  apps.json  build.sh  docker-compose.libracad.yaml
libracad/: api.py  hooks.py  modules.txt
libracad/libracad/doctype/die_layout/: die_layout.js  die_layout.json  die_layout.py
libracad/libracad/doctype/libracad_settings/: libracad_settings.json  libracad_settings.py
libracad/libracad/page/die_layout_editor/: die_layout_editor.html  die_layout_editor.js  die_layout_editor.json
libracad/libracad/workspace/libracad/: libracad.json
libracad/public/js/: estimate_cad_btn.js
