[project]
name = "libracad"
version = "0.1.0"
description = "Web-based 2D CAD for corrugated die layout creation, linked to Corrugated Estimating"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "libracad"
